@@ -53,137 +53,7 @@ public class DatabaseUpgrades {
 	 *
 	 */
 	public static WikiUser getWikiUser(String username) throws Exception {
-		// prior to JAMWiki 0.5.0 the remember_key column did not exist.  once
-		// the ability to upgrade to JAMWiki 0.5.0 is removed this code can be
-		// replaced with the method (below) that has been commented out.
-//		user = WikiBase.getDataHandler().lookupWikiUser(username, password, false);
-		WikiUser user = null;
-		TransactionStatus status = DatabaseConnection.startTransaction(getTransactionDefinition());
-		try {
-			Connection conn = DatabaseConnection.getConnection();
-			AnsiQueryHandler queryHandler = new AnsiQueryHandler();
-			WikiResultSet rs = queryHandler.lookupWikiUser(username, conn);
-			if (rs.size() == 0) {
-				return null;
-			}
-			int userId = rs.getInt(AnsiDataHandler.DATA_WIKI_USER_ID);
-			String sql = "select * from jam_wiki_user where wiki_user_id = ? ";
-			WikiPreparedStatement stmt = new WikiPreparedStatement(sql);
-			stmt.setInt(1, userId);
-			rs = stmt.executeQuery();
-			user = new WikiUser(username);
-			user.setUserId(rs.getInt(AnsiDataHandler.DATA_WIKI_USER_ID));
-			user.setDisplayName(rs.getString("display_name"));
-			user.setCreateDate(rs.getTimestamp("create_date"));
-			user.setLastLoginDate(rs.getTimestamp("last_login_date"));
-			user.setCreateIpAddress(rs.getString("create_ip_address"));
-			user.setLastLoginIpAddress(rs.getString("last_login_ip_address"));
-		} catch (Exception e) {
-			DatabaseConnection.rollbackOnException(status, e);
-			throw e;
-		} catch (Error err) {
-			DatabaseConnection.rollbackOnException(status, err);
-			throw err;
-		}
-		DatabaseConnection.commit(status);
-		return user;
-	}
-
-	/**
-	 *
-	 */
-	public static Vector upgrade042(Vector messages) throws Exception {
-		TransactionStatus status = DatabaseConnection.startTransaction(getTransactionDefinition());
-		try {
-			Connection conn = DatabaseConnection.getConnection();
-			// drop topic_content column
-			String sql = "alter table jam_topic drop column topic_content ";
-			DatabaseConnection.executeUpdate(sql, conn);
-			messages.add("Dropped topic_content column from jam_topic");
-			// add current_version_id column
-			if (Environment.getValue(Environment.PROP_DB_TYPE).equals(WikiBase.DATA_HANDLER_ORACLE)) {
-				sql = "alter table jam_topic add (current_version_id INTEGER) ";
-			} else {
-				sql = "alter table jam_topic add column current_version_id INTEGER ";
-			}
-			DatabaseConnection.executeUpdate(sql, conn);
-			messages.add("Added current_version_id column to jam_topic");
-			// add current_version_id constraint
-			DatabaseConnection.executeUpdate(AnsiQueryHandler.STATEMENT_CREATE_TOPIC_CURRENT_VERSION_CONSTRAINT, conn);
-			messages.add("Added jam_f_topic_topicv constraint to jam_topic");
-			// update jam_topic records
-			DatabaseConnection.executeUpdate(AnsiQueryHandler.STATEMENT_UPDATE_TOPIC_CURRENT_VERSIONS, conn);
-			messages.add("Added current_version_id values for jam_topic records");
-			// create the jam_watchlist table
-			DatabaseConnection.executeUpdate(AnsiQueryHandler.STATEMENT_CREATE_WATCHLIST_TABLE, conn);
-			messages.add("Created watchlist table");
-		} catch (Exception e) {
-			DatabaseConnection.rollbackOnException(status, e);
-			
-			// cleanup
-			messages.add("Error during upgrade, dropping the watchlist table");
-			try {
-				DatabaseConnection.executeUpdate(AnsiQueryHandler.STATEMENT_DROP_WATCHLIST_TABLE);				
-			} catch (Exception e2) {}
-			
-			throw e;
-		} catch (Error err) {
-			DatabaseConnection.rollbackOnException(status, err);
-			throw err;
-		}
-		DatabaseConnection.commit(status);
-		return messages;
-	}
-
-	/**
-	 *
-	 */
-	public static Vector upgrade050(Vector messages) throws Exception {
-		TransactionStatus status = DatabaseConnection.startTransaction(getTransactionDefinition());
-		try {
-			Connection conn = DatabaseConnection.getConnection();
-			// add remember_key to jam_wiki_user
-			String sql = "";
-			if (Environment.getValue(Environment.PROP_DB_TYPE).equals(WikiBase.DATA_HANDLER_ORACLE)) {
-				sql = "alter table jam_wiki_user add (remember_key VARCHAR(100)) ";
-			} else {
-				sql = "alter table jam_wiki_user add column remember_key VARCHAR(100) ";
-			}
-			DatabaseConnection.executeUpdate(sql, conn);
-			messages.add("Added remember_key column to jam_wiki_user");
-			// populate remember_key column
-			sql = "update jam_wiki_user set remember_key = (select encoded_password from jam_wiki_user_info where jam_wiki_user.wiki_user_id = jam_wiki_user_info.wiki_user_id) ";
-			DatabaseConnection.executeUpdate(sql, conn);
-			messages.add("Populated the remember_key column with data");
-			// set column not null
-			if (Environment.getValue(Environment.PROP_DB_TYPE).equals(WikiBase.DATA_HANDLER_MYSQL)) {
-				sql = "alter table jam_wiki_user MODIFY COLUMN remember_key VARCHAR(100) NOT NULL ";
-			} else if (Environment.getValue(Environment.PROP_DB_TYPE).equals(WikiBase.DATA_HANDLER_MSSQL)) {
-				sql = "alter table jam_wiki_user ALTER COLUMN remember_key VARCHAR(100) NOT NULL ";
-			} else if (Environment.getValue(Environment.PROP_DB_TYPE).equals(WikiBase.DATA_HANDLER_ORACLE)) {
-				sql = "alter table jam_wiki_user modify (remember_key VARCHAR(100) NOT NULL) ";
-			} else {
-				sql = "alter table jam_wiki_user ALTER COLUMN remember_key SET NOT NULL ";
-			}
-			DatabaseConnection.executeUpdate(sql, conn);
-			messages.add("remember_key column set to NOT NULL");
-			// add default_locale column
-			if (Environment.getValue(Environment.PROP_DB_TYPE).equals(WikiBase.DATA_HANDLER_ORACLE)) {
-				sql = "alter table jam_wiki_user add (default_locale VARCHAR(8)) ";
-			} else {
-				sql = "alter table jam_wiki_user add column default_locale VARCHAR(8) ";
-			}
-			DatabaseConnection.executeUpdate(sql, conn);
-			messages.add("Added default_locale column to jam_wiki_user");
-		} catch (Exception e) {
-			DatabaseConnection.rollbackOnException(status, e);
-			throw e;
-		} catch (Error err) {
-			DatabaseConnection.rollbackOnException(status, err);
-			throw err;
-		}
-		DatabaseConnection.commit(status);
-		return messages;
+		return WikiBase.getDataHandler().lookupWikiUser(username, null);
 	}
 
 	/**
